--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,15 @@ buildscript {
     ext.minSdk = 19
     ext.targetSdk = 29
     ext.compileSdk = 29
-    ext.kotlinVersion = '1.3.61'
     ext.buildToolsVersion = '29.0.2'
+    ext.kotlinVersion = '1.3.61'
+    ext.coroutinesVersion = '1.3.0-RC'
+    ext.retrofitVersion = '2.6.1'
+    ext.okHttpVersion = '3.10.0'
+    ext.daggerVersion = '2.25.2'
+    ext.rxVersion = '2.2.11'
+    ext.rxAndroidVersion = '2.1.1'
+    ext.lifecycleVersion = '2.2.0-rc03'
 
     repositories {
         google()
@@ -14,6 +21,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
