--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.minSdk = 19
+    ext.minSdk = 21
     ext.targetSdk = 29
     ext.compileSdk = 29
     ext.buildToolsVersion = '29.0.2'
@@ -13,6 +13,7 @@ buildscript {
     ext.rxVersion = '2.2.11'
     ext.rxAndroidVersion = '2.1.1'
     ext.lifecycleVersion = '2.2.0-rc03'
+    ext.glideVersion = '4.9.0'
 
     repositories {
         google()
