--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
     ext.rxAndroidVersion = '2.1.1'
     ext.lifecycleVersion = '2.2.0-rc03'
     ext.glideVersion = '4.9.0'
+    ext.roomVersion = '2.2.3'
 
     repositories {
         google()
